--- a/_sass/z_boilerplate/_typography.scss
+++ b/_sass/z_boilerplate/_typography.scss
@@ -59,9 +59,9 @@ body {
   */
 
 p {
-	-webkit-hyphens: auto;
-  -moz-hyphens: auto;
-  hyphens: auto;
+	// -webkit-hyphens: auto;
+ //  -moz-hyphens: auto;
+ //  hyphens: auto;
   max-width: 80ch;
 }
 
